# pfss

./: .clang-format  .gitattributes  COPYING  COPYING.adoc  Makefile.am  Makefile.in  README.adoc  aclocal.m4  autogen  configure  configure.ac  sst.bash  switch_db_rb.cfg
build-aux/: DATE.sh  GATBPS_CONFIG_FILE_RULES.am  GATBPS_CONFIG_LATER_RULES.am  GATBPS_CP_RULES.am  GATBPS_DOCKER_BUILD_RULES.am  GATBPS_GIT_ARCHIVE_RULES.am  GATBPS_GIT_BUNDLE_RULES.am  GATBPS_GIT_CLONE_RULES.am  GATBPS_VPATH_SEARCH.am  GATBPS_V_PAD.am  GATBPS_WGET_RULES.am  LTCURRENT.sh  VERSION.sh  adock  autogen.ac  autogen.am  cp.am  docker.am  echo.sh  gatbps-echo.sh  gatbps-gen-date.sh  gatbps-gen-libtool-c.sh  gatbps-gen-version.sh  gatbps.ac  gatbps.am  git.am  sst_ajh_asciidoctor_document_html_recipe.sh  wget.am
build-aux/downloads/: android-ndk-r21d-linux-x86_64.zip.ag.json  gpl-3.0.txt.ag.json
doc/: pfss-0.12.2-manual.tar.xz  pfss-0.12.2-pages.tar.xz  pfss-0.12.3-pages.tar.xz  pfss-0.12.5-manual.tar.xz  pfss-0.12.5-pages.tar.xz
doc/manual/: benchmarking.adoc  bitstring_definition.adoc  build.phony.ag  build_examples.adoc  c_api.adoc  c_api_pfss_gen.adoc  cl_complete_grid_fragment.adoc  cl_domain_element_array_blurb.adoc  cl_homogeneous_key_array_fragment.adoc  cl_key_concurrency_blurb.adoc  cl_logging_fragment.adoc  cl_pfss_eval.adoc  cl_pfss_eval_all.adoc  cl_pfss_eval_all_dot.adoc  cl_pfss_eval_all_example_1_output.txt  cl_pfss_eval_all_example_1_program.cpp  cl_pfss_eval_all_sum.adoc  cl_pfss_eval_all_sum_example_1_output.txt  cl_pfss_eval_all_sum_example_1_program.cpp  cl_pfss_get_domain_bits.adoc  cl_pfss_get_log_file.adoc  cl_pfss_get_range_bits.adoc  cl_pfss_get_status_name.adoc  cl_pfss_map_eval.adoc  cl_pfss_map_eval_reduce_sum.adoc  cl_pfss_set_log_file.adoc  cl_range_element_array_blurb_1a.adoc  cl_return_status_blurb.adoc  cl_single_range_element_blurb_1a.adoc  cl_single_range_element_blurb_1b.adoc  cl_thread_count_parameter_fragment.adoc  define_attributes.adoc  hardware_acceleration.adoc  index.adoc  index.html.children  logging.adoc  node-bindings.adoc  refs.adoc  with_feat_or_die_1.adoc  with_feat_or_die_2.adoc  (+1 more)
doc/pages/: Gemfile  README.adoc  _config.yml  build.phony.ac  build.phony.ag  build.phony.am  index.md  manual.am  style.scss
doc/pages/_includes/: acknowledgments.md  artifact_links_fragment.md  common.liquid  config.liquid.in  documentation.md  license.md  main.md  section_files.liquid  source.md  source_code.md
doc/pages/_layouts/: root.html
doc/readme/: .gitignore  acknowledgments.adoc  archive_entry_fragment.adoc  artifact_links_fragment.adoc  build.phony.ag  common.adoc  config.adoc  config.adoc.in  config_source.adoc  documentation.adoc  flatten.gawk  license.adoc  main.adoc  source.adoc  source_code.adoc
docs/: README.adoc  index.html  pfss-manual.tar.xz
docs/manual/: cl_pfss_eval_all_dot_example_1_output.txt  cl_pfss_eval_all_dot_example_1_program.cpp  index.html
install/: on-ubuntu
m4/: CALL_EVERYTHING.m4  DEFINE_AR.m4  DEFINE_AWK.m4  DEFINE_CC.m4  DEFINE_CFLAGS.m4  DEFINE_CPPFLAGS.m4  DEFINE_CXX.m4  DEFINE_CXXFLAGS.m4  DEFINE_DEDUCE_WYNAS.m4  DEFINE_DOCKER.m4  DEFINE_EXE_CFLAGS.m4  DEFINE_EXE_CXXFLAGS.m4  DEFINE_GIT.m4  DEFINE_GREP.m4  DEFINE_HAVE_AES_NI.m4  DEFINE_HAVE_ARM_CRYPTO.m4  DEFINE_HAVE_AVX_512_F.m4  DEFINE_HAVE_AVX_512_VAES.m4  DEFINE_HAVE_AVX_512_VL.m4  DEFINE_HAVE_CFLAG_MAES.m4  DEFINE_HAVE_CFLAG_MARCH_ARM_CRYPTO.m4  DEFINE_HAVE_CFLAG_MAVX512F.m4  DEFINE_HAVE_CFLAG_MAVX512VL.m4  DEFINE_HAVE_CFLAG_MSSE2.m4  DEFINE_HAVE_CFLAG_MVAES.m4  DEFINE_HAVE_CFLAG_WALL.m4  DEFINE_HAVE_CFLAG_WEXTRA.m4  DEFINE_HAVE_CPP_INCLUDE_JNI_H.m4  DEFINE_HAVE_CXXFLAG_MAES.m4  DEFINE_HAVE_CXXFLAG_MARCH_ARM_CRYPTO.m4  DEFINE_HAVE_CXXFLAG_MAVX512F.m4  DEFINE_HAVE_CXXFLAG_MAVX512VL.m4  DEFINE_HAVE_CXXFLAG_MSSE2.m4  DEFINE_HAVE_CXXFLAG_MVAES.m4  DEFINE_HAVE_CXXFLAG_STD_CPP11.m4  DEFINE_HAVE_CXXFLAG_WALL.m4  DEFINE_HAVE_CXXFLAG_WEXTRA.m4  DEFINE_HAVE_C_INCLUDE_JNI_H.m4  DEFINE_HAVE_JNI.m4  DEFINE_HAVE_LIB_NETTLE.m4  (+96 more)
pfss-ios-benchmark/: .gitignore  download  setup
pfss-ios-benchmark/pfss-ios-benchmark/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.mm  main.m
pfss-ios-benchmark/pfss-ios-benchmark.xcodeproj/: project.pbxproj
pfss-ios-benchmark/pfss-ios-benchmark/Base.lproj/: Main.storyboard
src/bash/: prelude.bash  sst.bash
src/bash/functions/: config_h_get_string.bash  expect_safe_path.bash  gitlab_ci_docker_push_here.bash  install_local_git.bash  make_j.bash  pick_max_procs.bash  sst_ac_append.bash  sst_ac_config_file.bash  sst_ac_include.bash  sst_ag_include.bash  sst_ag_process_leaf.bash  sst_ajh_asciidoctor_document.bash  sst_ajh_build_tree_program_wrapper.bash  sst_ajh_c_cpp_test.bash  sst_ajh_download.bash  sst_ajh_gitbundle.bash  sst_ajh_java_library.bash  sst_ajh_java_program_wrapper.bash  sst_ajh_java_test_suite.bash  sst_am_append.bash  sst_am_distribute_file.bash  sst_am_include.bash  sst_am_var_add.bash  sst_am_var_add_unique_file.bash  sst_am_var_add_unique_word.bash  sst_am_var_set.bash  sst_array_cmp.bash  sst_array_from_zterm.bash  sst_array_to_string.bash  sst_barf.bash  sst_centos_get_distro_version.bash  sst_centos_install_raw.bash  sst_centos_install_utility.bash  sst_csf.bash  sst_cygwin_install_raw.bash  sst_cygwin_install_utility.bash  sst_dot_slash.bash  sst_echo_eval.bash  sst_environment_slug.bash  sst_expect_ag_json.bash  (+37 more)
src/bash/include/: config_h_get_string.bash  expect_safe_path.bash  gitlab_ci_docker_push_here.bash  install_local_git.bash  sst_abs_prefix.bash  sst_ac_append.bash  sst_ac_config_file.bash  sst_ac_include.bash  sst_add_slash.bash  sst_add_slash_abs_prefix.bash  sst_add_slash_dot_slash.bash  sst_ag_call_defun_once_macros.bash  sst_ag_define_ordering_macros.bash  sst_ag_include.bash  sst_ag_process_leaf.bash  sst_ajh_asciidoctor_document.bash  sst_ajh_build_tree_program_wrapper.bash  sst_am_append.bash  (+108 more)
src/c_cpp/: build.phony.ag  libpfss_la.am
src/install/: on-x-symbolic-link-test
src/node/: Dockerfile  binding.gyp  example.js  package.json  pfss-node.cpp
(+534 files in other folders)
